# raydium-amm-fair

./: ARCHITECTURE.md  BUILD_STATUS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVNET_TEST_RESULTS.md  EXTERNAL_ACTIONS_NEEDED.md  FORK_TASK_SUMMARY.md  RAYDIUM_AUTHORITY_ANALYSIS.md  RAYDIUM_CUSTOM_AUTHORITY_CHANGES.md  RAYDIUM_FORK_GUIDE.md  README.md  TESTING.md  TESTING_SUMMARY.md  build.sh  continuum-pool-authority-design.md  core-testing.md  docs.md  plan.md  sdk_testing.md  wip.md
continuum-relayer/: Cargo.toml
continuum-relayer/src/: config.rs  errors.rs  main.rs  pool_manager.rs  raydium_accounts.rs  sequence_tracker.rs  swap_executor.rs  swap_executor_old.rs
continuum-wrapper/: Anchor.toml  Cargo.toml
continuum-wrapper/src/: lib.rs  lib_v1.rs  lib_v2.rs
program/src/: continuum_wrapper.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
sdk/: QUICK_START.md  README.md
sdk/examples/: complete-swap.ts  swap-demo.ts  swap.ts
sdk/scripts/: create-continuum-pool-complete.ts  create-continuum-pool-final.ts  create-continuum-pool-simple.ts  create-continuum-pool-v2.ts  create-continuum-pool.ts  create-cpmm-pool.ts  create-custom-authority-pool-complete.ts  create-minimal-pool.ts  create-pool-and-swap-devnet.ts  create-pool-and-tokens.ts  create-pool-devnet.ts  create-pool-simple.ts  create-pool-swap-devnet-simple.ts  create-pool-swap-devnet-v2.ts  create-raydium-pool-full.ts  create-raydium-pool-localnet.ts  deploy.ts  (+35 more)
test/: check-validator.ts  create-pool.ts  deploy-local.ts  init-fifo-simple.ts  run-all-tests.sh  setup-local.ts  test-fifo-swaps.ts
(+12 files in other folders)
