[package]
name = "continuum-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana
solana-client = "2.1.0"
solana-sdk = "2.1.0"
solana-transaction-status = "2.1.0"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"

# Anchor
anchor-client = "0.31.0"
anchor-lang = "0.31.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "1.0"

# Utils
bs58 = "0.5"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

# Database for tracking sequences
sled = "0.34"

# HTTP server for receiving swap requests
axum = "0.7"
tower = "0.4"

# Metrics
prometheus = "0.13"
